--- a/SourceCode/2023/March2023/Division Operation/Division.xaml
+++ b/SourceCode/2023/March2023/Division Operation/Division.xaml
@@ -2,7 +2,7 @@
   <x:Members>
     <x:Property Name="in_FirstNumber" Type="InArgument(x:Int32)" />
     <x:Property Name="in_SecondNumber" Type="InArgument(x:Int32)" />
-    <x:Property Name="out_Output" Type="OutArgument(ui:GenericValue)" />
+    <x:Property Name="out_Result" Type="OutArgument(ui:GenericValue)" />
   </x:Members>
   <this:Division.in_FirstNumber>
     <InArgument x:TypeArguments="x:Int32" />
@@ -13,7 +13,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>664,941</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>486,816</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Division_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -81,7 +81,7 @@
       <AssemblyReference>System.Runtime.Serialization.Primitives</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Division" sap:VirtualizedContainerService.HintSize="496,876" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Division" sap:VirtualizedContainerService.HintSize="496,751" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -99,12 +99,11 @@
     </ui:InputDialog>
     <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
-        <OutArgument x:TypeArguments="ui:GenericValue">[out_Output]</OutArgument>
+        <OutArgument x:TypeArguments="ui:GenericValue">[out_Result]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="ui:GenericValue">[in_FirstNumber/in_SecondNumber]</InArgument>
+        <InArgument x:TypeArguments="ui:GenericValue">[in_FirstNumber\in_SecondNumber]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[out_Output]" />
   </Sequence>
 </Activity>
